k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invest-api
  namespace: invest-api
  labels:
    app: invest-api
spec:
  type: ClusterIP
  selector:
    app: invest-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
